# todomvc-022

./: .dockerignore  .gitignore  .plan  Dockerfile  README.md  fly.toml
backend/: Cargo.toml
backend/migrations/: 20240101000000_create_todos.sql
backend/src/: api.rs  db.rs  lib.rs  main.rs  model.rs
backend/tests/: api_tests.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  lib.rs  main.rs  router.rs  state.rs
frontend/src/components/: footer.rs  header.rs  todo_item.rs  todo_list.rs
